--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.iarcuschin:simpleratingbar:0.1.5'
 
 
     testImplementation 'junit:junit:4.12'
