--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.iarcuschin:simpleratingbar:0.1.5'
+    implementation 'com.romandanylyk:pageindicatorview:1.0.0'
 
 
     testImplementation 'junit:junit:4.12'
